--- a/web-backend/src/main/webapp/WEB-INF/web.xml
+++ b/web-backend/src/main/webapp/WEB-INF/web.xml
@@ -3,15 +3,22 @@
          xmlns="http://java.sun.com/xml/ns/javaee"
          xsi:schemaLocation="http://java.sun.com/xml/ns/javaee http://java.sun.com/xml/ns/javaee/web-app_2_5.xsd"
          id="WebApp_ID" version="2.5">
-    <display-name>order-service</display-name>
+    <display-name>web-backend</display-name>
     <context-param>
         <param-name>contextConfigLocation</param-name>
         <param-value>classpath*:config/applicationContext.xml</param-value>
     </context-param>
+    <!-- 加载其他的xml配置 -->
     <context-param>
-        <param-name/>
-        <param-value/>
+        <param-name>logbackConfigLocation</param-name>
+        <param-value>classpath:logback-spring.xml</param-value>
     </context-param>
+
+    <!-- logback监听器（注意顺序，在spring监听器上面） -->
+    <listener>
+        <listener-class>ch.qos.logback.ext.spring.web.LogbackConfigListener</listener-class>
+    </listener>
+    <!-- Spring 监听器 -->
     <listener>
         <listener-class>org.springframework.web.context.ContextLoaderListener</listener-class>
     </listener>
